# Life

./: .gitignore  cabal.sandbox.config  life  life.cabal  testBoard.txt
src/: Main.hs
src/Game/: Life.hs
src/Game/Life/: Core.hs  GUI.hs  Print.hs
